--- a/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
+++ b/translations/kangyur/translations/055-003_toh129-the_absorption_of_the_miraculous_ascertainment_of_peace.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-055-003-662">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.29 <date>2023</date>
+                <edition>v 1.3.31 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -226,6 +226,12 @@
                 </change>
                 <change who="#john" when="2023-09-15T16:52:28.839Z" type="text-version" status="1.3.29" xml:id="UT22084-055-003-719">
                     <desc>Edits in a few places involving yid la byed pa.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.3.30" xml:id="UT22084-055-003-720">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T20:54:58.797Z" type="text-version" status="1.3.31" xml:id="UT22084-055-003-721">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1480,7 +1486,7 @@
                                 Meru” is missing from the passage cited in the <title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>. 
                             It may have originally belonged there, however, as the
                                 Sanskrit reads, “He would be the same as Brahmā, the same as Indra, and as unshakable
-                                as . . . .”</note> They would be imperturbable, compassionate, loving, and
+                                as….”</note> They would be imperturbable, compassionate, loving, and
                         interested in fulfilling the wishes of all beings. Their experience would be non-regressing.
                         Their minds would be like earth, like water, like fire, and like the sky. They would work to
                         eradicate the desire, anger, delusion, and hate of all beings. </p>
@@ -2818,8 +2824,8 @@
                         <gloss xml:id="UT22084-055-003-280" type="term" mode="match">
                             <term type="translationMain">Licchavi</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">licchavi</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lits+tsha bi</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལིཙྪ་བི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lits+tsha bI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལིཙྪ་བཱི།</term>
                             <note type="definition">
                                 <p>Name of the tribe and republican city-state whose capital was Vaiśālī.</p>
                             </note>
@@ -3184,7 +3190,7 @@
         <item>
             <gloss type="term" xml:id="UT22084-055-003-300">
                             <term type="translationMain">worthy one</term>
-                            <term type="translationAlternative">worthy </term>
+                            <term type="translationAlternative">worthy</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">arhat</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dgra bcom pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགྲ་བཅོམ་པ།</term>
@@ -3628,8 +3634,8 @@
             <gloss type="person" xml:id="UT22084-055-003-339">
                             <term type="translationMain">Dānaśīla</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dānaśīla</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">da na shi la</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ད་ན་ཤི་ལ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dA na shI la</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">དཱ་ན་ཤཱི་ལ།</term>
                             <note type="definition">
                                 <p>An Indian paṇḍita resident in Tibet during the late 8th and early 9th
                     centuries.</p>
@@ -4536,7 +4542,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A divine being who rules the Heaven of the Thirty-Three. Also known as Indra.</p>
                             </note>
                         </gloss>
@@ -4545,8 +4551,8 @@
                         <gloss xml:id="UT22084-055-003-422" type="person" mode="match">
                             <term type="translationMain">Śākyamuni</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shakya thub pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤཀྱ་ཐུབ་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
                             <note type="definition">
                                 <p>The buddha of this age; the historical buddha.</p>
                             </note>
@@ -4940,7 +4946,7 @@
         <item>
             <gloss type="person" xml:id="UT22084-055-003-458">
                             <term type="translationMain">Sūryaprabha</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sūryaprabha </term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sūryaprabha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nyi ma’i ’od</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཉི་མའི་འོད།</term>
                             <note type="definition">
@@ -5549,8 +5555,8 @@
             <gloss type="place" xml:id="UT22084-055-003-514">
                             <term type="translationMain">Vārāṇasī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">vārāṇasī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ba ra na si</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">བ་ར་ན་སི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bA rA Na sI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">བཱ་རཱ་ཎ་སཱི།</term>
                             <note type="definition">
                                 <p>City in North India where the Buddha first taught the Dharma.</p>
                             </note>
