--- a/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
+++ b/translations/kangyur/translations/057-004_toh145,847-the_dharani_of_the_jewel_torch.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-057-004-13179">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.4.25 <date>2023</date>
+                <edition>v 1.4.26 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -304,6 +304,9 @@
                     <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-10-23T20:59:41.475Z" type="text-version" status="1.4.25" xml:id="UT22084-057-004-13250">
+                    <desc>updated ellipsis.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:00:48.938Z" type="text-version" status="1.4.26" xml:id="UT22084-057-004-13251">
                     <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
