--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
         <sponsor xml:id="UT22084-064-002-1690">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.14 <date>2023</date>
+                <edition>v 1.1.16 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -212,6 +212,12 @@
                 </change>
                 <change who="#celso" when="2023-09-29T01:17:30.478Z" type="text-version" status="1.1.14" xml:id="UT22084-064-002-1736">
                     <desc>adjusted milestone 1.1</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.1.15" xml:id="UT22084-064-002-1737">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:10:07.584Z" type="text-version" status="1.1.16" xml:id="UT22084-064-002-1738">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -3955,7 +3961,7 @@
           <p tid="575">“Great brahmin, see the greatness of the Tathāgata’s virtuous qualities! Great brahmin, you should request forgiveness from the
             bodhisattva mahāsattva Mahākapila, who is surrounded by his retinue of bodhisattvas! Great brahmin, you should know that those who do not
             recognize the greatness of the virtuous qualities of Devadatta—whether monks, nuns, laymen, or laywomen—have only half attained the
-            arising of buddhahood; they have only one eye, and they have attained only half a human body.<note place="end" xml:id="UT22084-064-002-556"> Ch. says the opposite: “Those monks . . . who <distinct>are</distinct> capable of understanding the merit
+            arising of buddhahood; they have only one eye, and they have attained only half a human body.<note place="end" xml:id="UT22084-064-002-556"> Ch. says the opposite: “Those monks … who <distinct>are</distinct> capable of understanding the merit
               of Devadatta should undoubtedly be known as true disciples of the Buddha—they have attained one half of the Buddha’s merit; they have
               attained one eye of buddhahood; they have attained one half of the Buddha’s body.”</note>
                     </p>
@@ -7074,8 +7080,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1055">
                             <term type="translationMain">Mahāprajāpatī Gautamī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mahāprajāpatī gautamī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skye dgu’i bdag mo chen mo gau ta mi</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱེ་དགུའི་བདག་མོ་ཆེན་མོ་གཽ་ཏ་མི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">skye dgu’i bdag mo chen mo gau ta mI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐྱེ་དགུའི་བདག་མོ་ཆེན་མོ་གཽ་ཏ་མཱི།</term>
                             <note type="definition">
                                 <p>The Buddha Śākyamuni’s maternal aunt who became the first female renunciant in the Buddhist monastic
                 order.</p>
@@ -7086,8 +7092,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1056">
                             <term type="translationMain">Licchavi</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">licchavi</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lid tsha bi</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལིད་ཚ་བི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lid tsha bI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལིད་ཚ་བཱི།</term>
                             <note type="definition">
                                 <p>The name of a city-state, whose capital was Vaiśālī, and the ruling clan that dwelt there.</p>
                             </note>
@@ -7284,8 +7290,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1074">
                             <term type="translationMain">Ganges Offering</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gas byin</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གས་བྱིན།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gAs byin</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གཱས་བྱིན།</term>
                             <note type="definition">
                                 <p>A Licchavi youth present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -7361,8 +7367,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1081">
                             <term type="translationMain">Ganges Protector</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gas skyong</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གས་སྐྱོང་།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gAs skyong</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གཱས་སྐྱོང་།</term>
                             <note type="definition">
                                 <p>A Licchavi youth present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -7735,8 +7741,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1115">
                             <term type="translationMain">Kātyāyanī</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kātyāyanī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ka t+ya</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀ་ཏྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">kA t+yA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀཱ་ཏྱཱ།</term>
                             <note type="definition">
                                 <p>Another name for the goddess Durga.</p>
                             </note>
@@ -7746,8 +7752,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1116">
                             <term type="translationMain">Kātyāyanīputra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kātyāyanīputra</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">ka t+ya’i bu</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀ་ཏྱའི་བུ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">kA t+yA’i bu</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀཱ་ཏྱཱའི་བུ།</term>
                             <note type="definition">
                                 <p>See “Kātyāyanī.”</p>
                             </note>
@@ -7768,8 +7774,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1118">
                             <term type="translationMain">Kauṇḍinya</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">kauṇḍinya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">kaun+di n+ya</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀཽནྡི་ནྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">kauN+Di n+ya</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀཽཎྜི་ནྱ།</term>
                             <note type="definition">
                                 <p>A brahmin described as a master grammarian.</p>
                             </note>
@@ -7849,7 +7855,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བརྒྱ་བྱིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Chief of the gods who reside in the Heaven of the Thirty-Three. Also known as Indra.</p>
                             </note>
                         </gloss>
@@ -8188,8 +8194,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1156">
                             <term type="translationMain">Great Cloud Priceless Beryl</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">sprin chen rin thang med pa’i bai dur+ya</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྤྲིན་ཆེན་རིན་ཐང་མེད་པའི་བཻ་དུརྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">sprin chen rin thang med pa’i bai dUr+ya</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྤྲིན་ཆེན་རིན་ཐང་མེད་པའི་བཻ་དཱུརྱ།</term>
                             <note type="definition">
                                 <p>A bodhisattva present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -8892,8 +8898,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1220">
                             <term type="translationMain">Beryl Light</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bai dur+ya’i ’od</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཻ་དུརྱའི་འོད།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bai dUr+ya’i ’od</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཻ་དཱུརྱའི་འོད།</term>
                             <note type="definition">
                                 <p>A devaputra present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -8903,8 +8909,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1221">
                             <term type="translationMain">Appearance of Beryl-Like Light</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bai dur+ya ltar ’od snang ba</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཻ་དུརྱ་ལྟར་འོད་སྣང་བ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bai dUr+ya ltar ’od snang ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཻ་དཱུརྱ་ལྟར་འོད་སྣང་བ།</term>
                             <note type="definition">
                                 <p>A devaputra present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -8980,8 +8986,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1228">
                             <term type="translationMain">Māndārava Heap</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">man dar ba brtsegs pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མན་དར་བ་བརྩེགས་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">man dAr ba brtsegs pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མན་དཱར་བ་བརྩེགས་པ།</term>
                             <note type="definition">
                                 <p>A devaputra present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -10047,8 +10053,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1325">
                             <term type="translationMain">Entering into Ganges Stainlessness</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang ga dri ma med par ’jug pa</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་ག་དྲི་མ་མེད་པར་འཇུག་པ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gA dri ma med par ’jug pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གཱ་དྲི་མ་མེད་པར་འཇུག་པ།</term>
                             <note type="definition">
                                 <p>An asura king present in the assembly of the Buddha Śākyamuni.</p>
                             </note>
@@ -10520,8 +10526,8 @@
                         <gloss type="person" xml:id="UT22084-064-002-1368">
                             <term type="translationMain">Śākya</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śākya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shakya</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤཀྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">shAkya</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤཱཀྱ།</term>
                             <note type="definition">
                                 <p>Name of the clan into which the Buddha Śākyamuni was born.</p>
                             </note>
@@ -11111,7 +11117,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">rājagṛha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal po’i khab</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་པོའི་ཁབ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital of the ancient Indian kingdom of Magadha and site of many of the Buddha’s teachings.</p>
                             </note>
                         </gloss>
@@ -11145,7 +11151,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śrāvastī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཉན་ཡོད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital city of Kośala.</p>
                             </note>
                         </gloss>
@@ -11263,8 +11269,8 @@
                         <gloss xml:id="UT22084-064-002-1437" type="place" mode="match">
                             <term type="translationMain">Ganges</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gaṅgā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang ga</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་ག</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">gang gA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">གང་གཱ།</term>
                             <note type="definition" rend="override">
                                 <p>The sacred river of North India.</p>
                             </note>
