--- a/translations/kangyur/translations/072-008_toh308_questions_regarding_death_and_transmigration.xml
+++ b/translations/kangyur/translations/072-008_toh308_questions_regarding_death_and_transmigration.xml
@@ -32,7 +32,7 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-072-008-250">Geshe Yama Rinchen</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.22.15 <date>2023</date>
+                <edition>v 1.22.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -136,6 +136,12 @@
                 </change>
                 <change who="#celso" when="2023-09-29T01:22:16.482Z" type="text-version" status="1.22.15" xml:id="UT22084-072-008-274">
                     <desc>added missing milestone c.1</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.22.16" xml:id="UT22084-072-008-275">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:16:01.225Z" type="text-version" status="1.22.17" xml:id="UT22084-072-008-276">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -524,9 +530,9 @@
                             ba</foreign> (“death and transmigration”) replacing the 
                             <foreign xml:lang="Bo-Ltn" type="term">tshe ’pho ba</foreign> in the title 
                         given at the beginning of the text.<note place="end" xml:id="UT22084-072-008-24">Note too that in this version of the title found at the end of the 
-                            text, <foreign xml:lang="Bo-Ltn" type="term">bstan pa’i mdo</foreign> (“The Sūtra Teaching . . .”) 
+                            text, <foreign xml:lang="Bo-Ltn" type="term">bstan pa’i mdo</foreign> (“The Sūtra Teaching…”) 
                             replaces <foreign xml:lang="Bo-Ltn" type="term">zhus pa’i mdo</foreign> (The Sūtra of Questions 
-                            Regarding . . .”). This title given at the end of the text is the one that 
+                            Regarding…”). This title given at the end of the text is the one that 
                             figures in Butön’s list of canonical translations (F.144.b), Situ Paṇchen’s catalogue 
                             (<foreign xml:lang="Sa-Ltn" type="term">dkar chag</foreign>) of the Degé Kangyur (F.134.b), and 
                             quite frequently (or as the variant <title xml:lang="Bo-Ltn">’chi ’pho ba ji ltar ’gyur 
@@ -1069,7 +1075,7 @@
                                 ’phos pa’i mtshan ma dang dan rtags ’jig rten pa gang dag smra ba
                                 ni</foreign>; S, L: <foreign xml:lang="Bo-Ltn" type="quote">tshe ma ’phos pa’i mtshan ma dang dan rtags dang bcas pa’i ’jig
                                 rten pa gang dag smra ba ni</foreign>. “What one calls worldlings
-                            who have characteristics and distinctive signs of the living . . . .”</note>
+                            who have characteristics and distinctive signs of the living….”</note>
                         are things fabricated by a type of gandharva called <distinct>the
                             pervader</distinct>. The so-called <foreign xml:lang="Sa-Ltn" type="term">vicana</foreign> sorts of gandharvas, the talkative sorts of
                         yakṣas, and the inquisitive <foreign xml:lang="Bo-Ltn" type="term">bar hi ni
@@ -1893,8 +1899,8 @@
                             <term type="translationMain">Śākya</term>
                             <term type="translationAlternative">Śākyan</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shakya</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">ཤཀྱ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ།</term>
                             <note type="definition">
                                 <p>The clan from which the Buddha was
                                 descended.</p>
