--- a/translations/kangyur/translations/072-012_toh312,628,1093-the_mahasutra_entering_the_city_of_vaisali.xml
+++ b/translations/kangyur/translations/072-012_toh312,628,1093-the_mahasutra_entering_the_city_of_vaisali.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-012-261">Dr. John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.30 <date>2023</date>
+                <edition>v 1.1.31 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -193,6 +193,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T14:32:15.177Z" type="text-version" status="1.1.30" xml:id="UT22084-072-012-304">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:17:38.008Z" type="text-version" status="1.1.31" xml:id="UT22084-072-012-305">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -708,9 +711,9 @@
                         <l>Pratyekabuddhas, arhats, and those being trained,</l>
                         <l>Those who do harm to the world </l>
                         <l>Should be gone from this city.<note place="end" xml:id="UT22084-072-012-101"> The Chinese <title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title> and the <title xml:lang="Sa-Ltn">Mahā­mantrānu­sāriṇī</title>
-                            lack these two verses (“Surrounded by . . . Should be gone from this city”). The newly identified Sanskrit
+                            lack these two verses (“Surrounded by … Should be gone from this city”). The newly identified Sanskrit
                                     <title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title> fragments tally with the line “Those who have thoughts
-                            of anger . . . should stay.”</note>
+                            of anger … should stay.”</note>
                         </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-072-012-102"/>
@@ -941,8 +944,8 @@
                         <l>Pratyekabuddhas, arhats, and those being trained,</l>
                         <l>Those who do harm to the world </l>
                         <l>Should be gone from this city.<note place="end" xml:id="UT22084-072-012-148"> The Chinese <title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title> and <title xml:lang="Sa-Ltn">Mahā­mantrānu­sāriṇī</title> lack
-                            these two verses (“Surrounded by . . . Should be gone from this city”). The newly identified Sanskrit <title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title> fragments tally with the line “Those who have thoughts of
-                            anger . . . should stay.”</note>
+                            these two verses (“Surrounded by … Should be gone from this city”). The newly identified Sanskrit <title xml:lang="Sa-Ltn">Bhaiṣajyavastu</title> fragments tally with the line “Those who have thoughts of
+                            anger … should stay.”</note>
                         </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-072-012-149"/>
